tests/out/error/match/else_unreachable.in.bt
enum JobStatus {
	unemployed
	employed
}

s := JobStatus.employed
match s {
	.unemployed {}
	.employed {}
	else {}
}
